@@ -19,48 +19,70 @@ package com.echothree.control.user.user.server.command;
 import com.echothree.control.user.user.common.form.GetUserVisitGroupForm;
 import com.echothree.control.user.user.common.result.UserResultFactory;
 import com.echothree.model.control.core.common.EventTypes;
+import com.echothree.model.control.user.server.control.UserControl;
+import com.echothree.model.control.user.server.logic.UserVisitGroupLogic;
+import com.echothree.model.control.party.common.PartyTypes;
+import com.echothree.model.control.security.common.SecurityRoleGroups;
+import com.echothree.model.control.security.common.SecurityRoles;
+import com.echothree.model.data.user.server.entity.UserVisitGroup;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.message.ExecutionErrors;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
-import java.util.Arrays;
-import java.util.Collections;
+import com.echothree.util.server.control.BaseSingleEntityCommand;
+import com.echothree.util.server.control.CommandSecurityDefinition;
+import com.echothree.util.server.control.PartyTypeDefinition;
+import com.echothree.util.server.control.SecurityRoleDefinition;
+import com.echothree.util.server.persistence.Session;
 import java.util.List;
 
 public class GetUserVisitGroupCommand
-        extends BaseSimpleCommand<GetUserVisitGroupForm> {
-    
+        extends BaseSingleEntityCommand<UserVisitGroup, GetUserVisitGroupForm> {
+
+    private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
-    
+
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-            new FieldDefinition("UserVisitGroupName", FieldType.ENTITY_NAME, true, null, null)
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.UserVisitGroup.name(), SecurityRoles.Review.name())
+                ))
         ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("UserVisitGroupName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
+                new FieldDefinition("Uuid", FieldType.UUID, false, null, null)
+        );
     }
-    
+
     /** Creates a new instance of GetUserVisitGroupCommand */
     public GetUserVisitGroupCommand(UserVisitPK userVisitPK, GetUserVisitGroupForm form) {
-        super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, true);
+        super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
-        var userControl = getUserControl();
+    protected UserVisitGroup getEntity() {
+        var userVisitGroup = UserVisitGroupLogic.getInstance().getUserVisitGroupByUniversalSpec(this, form);
+
+        if(userVisitGroup != null) {
+            sendEvent(userVisitGroup.getPrimaryKey(), EventTypes.READ, null, null, getPartyPK());
+        }
+
+        return userVisitGroup;
+    }
+
+    @Override
+    protected BaseResult getResult(UserVisitGroup userVisitGroup) {
+        var userControl = Session.getModelController(UserControl.class);
         var result = UserResultFactory.getGetUserVisitGroupResult();
-        var userVisitGroupName = form.getUserVisitGroupName();
-        var userVisitGroup = userControl.getUserVisitGroupByName(userVisitGroupName);
-        
+
         if(userVisitGroup != null) {
             result.setUserVisitGroup(userControl.getUserVisitGroupTransfer(getUserVisit(), userVisitGroup));
-            
-            sendEvent(userVisitGroup.getPrimaryKey(), EventTypes.READ, null, null, getPartyPK());
-        } else {
-            addExecutionError(ExecutionErrors.UnknownUserVisitGroupName.name(), userVisitGroupName);
         }
-        
+
         return result;
     }
-    
+
 }
